--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -353,15 +353,18 @@
   .total-price-content button {
     width: 30px;
     height: 30px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
   }
 
   .total-price-content button img {
     width: 18px;
     height: 18px;
+  }
+
+  /* Menu */
+  .navbar-toggler {
+    font-size: 24px;
+    top: 80px;
+    width: 40px;
+    height: 40px;
   }
 }
